--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,19 @@
 		<encoding>utf8</encoding>
 		<!-- spring 版本 -->
 		<spring-version>4.2.3.RELEASE</spring-version>
+		<!-- slf4j -->
 		<slf4j.version>1.7.12</slf4j.version>
+		<!-- logback -->
 		<logback.version>1.1.3</logback.version>
+		<!-- mybatis -->
+		<mybatis.version>3.3.0</mybatis.version>
+		<!-- 文件上传 -->
+		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 	</properties>
 
 	<dependencies>
 
-		<!-- spring需要的jar包 -->
+		<!-- spring context 需要的jar包 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -80,6 +86,12 @@
 			<version>1.6.12</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.7</version>
+		</dependency>
+
 		<!-- mybatis spring -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -92,8 +104,14 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.3.0</version>
-			<type>jar</type>
+			<version>${mybatis.version}</version>
+		</dependency>
+
+		<!-- 文件上传 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 
 		<!-- JSON -->
@@ -118,13 +136,6 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.4</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<version>1.8.7</version>
-		</dependency>
-
 
 		<!-- JSON annotations -->
 		<dependency>
@@ -238,6 +249,7 @@
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
 			<version>2.6.11</version>
+			<type>jar</type>
 		</dependency>
 
 		<!-- WEB SOCKET -->
